<resources>
    <!--Application Name-->
    <string name="app_name">Fotomwa Ltd</string>

<!--    Animation-->
    <string name="transition_string">anime</string>

    <!--Welcome Slider-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Photography!</string>
    <string name="slide_1_desc">Enjoy our Professional Photography.</string>

    <string name="slide_2_title">Convenient Pickup</string>
    <string name="slide_2_desc">Collect Your Photos at you own convenience thanks to our secure storage.</string>

    <string name="slide_3_title">Great Accessories</string>
    <string name="slide_3_desc">Get Cameras and the Accessories to pair with as you capture memories.</string>

    <string name="slide_4_title">Homely Studio</string>
    <string name="slide_4_desc">Enjoy bringing the Family to Cherish the Home of the Heart.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="view_orders">View Orders</string>
    <string name="new_order">Purchase</string>
    <string name="re_order">Re-Order</string>
    <string name="current_order">Progress</string>

    <!--Landing Page-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Orders</item>
        <item>Photos</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">User Profile</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="nav_other">Other</string>
    <string name="user_name">User Name</string>
    <string name="user_desc">User Role / Description</string>

<!--    Login and Register-->
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="link_signup">No account yet? Create one</string>
    <string name="fotomwa_logo">Fotomwa Logo</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Local Address</string>
    <string name="name">User Name</string>
    <string name="nav_image_background_banner">Nav Image Background Banner</string>
    <string name="nav_user_icon">Nav User Icon</string>


    <string name="settings_fragment_title">Settings Fragment</string>
    <string name="home_fragment_title">Home Fragment</string>
    <string name="notifications_fragment_title">Notifications Fragment</string>
    <string name="orders_fragment_title">Orders Fragment</string>
    <string name="photos_fragment_title">Photos Fragment</string>

<!--    CardView-->
    <string name="backdrop_desc">TODO</string>
    <string name="nav_header_text">User Name</string>
    <string name="overflow_desc">TODO</string>
    <string name="thumbnail_desc">TODO</string>
    <string name="backdrop_title">USER NAME</string>
    <string name="backdrop_subtitle">Email Address</string>

<!--    Collapsing ToolBar-->
    <string name="view_profile">View</string>
    <string name="edit_profile">Edit</string>
</resources>