<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item android:id="@+id/nav_photos"
            android:icon="@drawable/fotomwa_camera_1"
            android:title="@string/nav_photos" />
        <item android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/nav_orders" />
        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_notifications" />
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item android:id="@+id/nav_about_us" android:icon="@drawable/ic_about_us" android:title="@string/nav_about_us" />
            <item android:id="@+id/nav_privacy_policy" android:icon="@drawable/ic_privacy_policy" android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>