<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view_orders"
        android:enabled="true"
        android:icon="@drawable/progress"
        android:title="@string/view_orders"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/order"
        android:enabled="true"
        android:icon="@drawable/progress"
        android:title="@string/new_order"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/re_orders"
        android:enabled="true"
        android:icon="@drawable/progress"
        android:title="@string/re_order"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/current_orders"
        android:enabled="true"
        android:icon="@drawable/progress"
        android:title="@string/current_order"
        app:showAsAction="ifRoom"/>
</menu>